force-app/main/default/objects/Site_User__c/Site_User__c.object-meta.xml
<CustomObject>
    <description>Users assigned to one or more warehouses. Visibility in putaway and Available inventory is managed using user record mapping.</description>
    <label>Site User</label>
    <nameField>
        <displayFormat>SU-{00000}</displayFormat>
        <label>Site User #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Site Users</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>